--- a/_posts/2017-08-16-bdt.md
+++ b/_posts/2017-08-16-bdt.md
@@ -5,19 +5,13 @@ categories: AndroidApplication
 ---
 ### 哔哩缓存传输
 
-在两台手机之间传输b站的离线缓存
+在两台手机之间传输b站的离线缓存，包括视频和弹幕
 
-用法：两手机加入同一wifi,机二打开机一生成的网址，下载东西选择用这个应用打开就能导回b站客户端，包括视频和弹幕
-
-
-
-需要自定义存储目录，请在内置存储创建.bdt_path文件（路径为：/sdcard/.bdt_path ） 内容是你sd卡或otg优盘的根目录，如：/sdcard
-
-反馈QQ群：586153954
-
-下载：
-[酷安](http://www.coolapk.com/apk/153242)
+使用方法：两手机加入同一wifi,机二打开机一生成的网址，下载，选择用这个应用打开，就能导回b站客户端
 
 ![](/img/bdt-1.png)
 
 ![](/img/bdt-2.png)
+
+下载：
+[酷安](http://www.coolapk.com/apk/153242)
